--- a/res/css/shortpixel-bulk.css
+++ b/res/css/shortpixel-bulk.css
@@ -62,7 +62,7 @@
   box-shadow: none;
 }
 .wrap.is-shortpixel-bulk-page header .top-buttons a:hover, .wrap.is-shortpixel-bulk-page header .top-buttons button:hover {
-  background: #32d7e5;
+  background: rgb(50.3421052632, 215.4868421053, 228.6578947368);
 }
 .wrap.is-shortpixel-bulk-page header .top-buttons a i.switch, .wrap.is-shortpixel-bulk-page header .top-buttons button i.switch {
   width: 18px;
@@ -276,7 +276,7 @@
   width: 30px;
 }
 .wrap.is-shortpixel-bulk-page section.panel.dashboard .bulk-wrapper button.start:hover {
-  background: #1793ab;
+  background: rgb(23.0629370629, 146.5174825175, 170.9370629371);
   color: #fff;
 }
 .wrap.is-shortpixel-bulk-page section.panel.dashboard .bulk-wrapper button.start:disabled {
@@ -495,7 +495,7 @@
   line-height: 1;
 }
 .wrap.is-shortpixel-bulk-page .button:hover {
-  background: #32d7e5;
+  background: rgb(50.3421052632, 215.4868421053, 228.6578947368);
   color: #fff;
 }
 .wrap.is-shortpixel-bulk-page .button .dashicons {
@@ -523,7 +523,7 @@
   transition: all 0.1s ease-in-out;
 }
 .wrap.is-shortpixel-bulk-page .button-primary:hover {
-  background: #32d7e5;
+  background: rgb(50.3421052632, 215.4868421053, 228.6578947368);
 }
 .wrap.is-shortpixel-bulk-page nav {
   margin: 45px 0;
@@ -704,7 +704,7 @@
   display: none;
   margin: 25px auto;
   width: 95%;
-  background: #1fbec9;
+  background: rgb(31, 190, 201);
   border: 1px solid #ccc;
   font-size: 26px;
   line-height: 26px;
@@ -716,7 +716,7 @@
   transition: all 900ms;
 }
 .wrap.is-shortpixel-bulk-page .processor-paused:hover {
-  background: #1ca9b3;
+  background: rgb(27.5926724138, 169.1163793103, 178.9073275862);
 }
 .wrap.is-shortpixel-bulk-page .processor-paused .dashicons {
   margin-right: 6px;
@@ -788,7 +788,7 @@
   font-weight: 700;
 }
 .wrap.is-shortpixel-bulk-page section.spio-progressbar .flex > div.result .line {
-  background: linear-gradient(90deg, #cccccc 0%, #cccccc 49.9%, white 51%, white 100%);
+  background: linear-gradient(90deg, rgb(204, 204, 204) 0%, rgb(204, 204, 204) 49.9%, rgb(255, 255, 255) 51%, rgb(255, 255, 255) 100%);
 }
 .wrap.is-shortpixel-bulk-page section.spio-progressbar .flex > div.select .line {
   left: 50%;
@@ -840,7 +840,7 @@
      }*/
 }
 .wrap.is-shortpixel-bulk-page section.panel.selection .spio-progressbar .select .line {
-  background: linear-gradient(90deg, #1fbec9 0%, #1fbec9 49.9%, #cccccc 50%, #cccccc 100%);
+  background: linear-gradient(90deg, rgb(31, 190, 201) 0%, rgb(31, 190, 201) 49.9%, rgb(204, 204, 204) 50%, rgb(204, 204, 204) 100%);
 }
 .wrap.is-shortpixel-bulk-page section.panel.selection .load.wrapper,
 .wrap.is-shortpixel-bulk-page section.panel.selection .interface.wrapper {
@@ -1019,7 +1019,7 @@
   background: #1FBEC9;
 }
 .wrap.is-shortpixel-bulk-page section.panel.summary .spio-progressbar .summary .line {
-  background: linear-gradient(90deg, #1fbec9 0%, #1fbec9 49.9%, #cccccc 50%, #cccccc 100%);
+  background: linear-gradient(90deg, rgb(31, 190, 201) 0%, rgb(31, 190, 201) 49.9%, rgb(204, 204, 204) 50%, rgb(204, 204, 204) 100%);
 }
 .wrap.is-shortpixel-bulk-page section.panel.summary h3 {
   font-size: 24px;
@@ -1229,7 +1229,7 @@
 }
 .wrap.is-shortpixel-bulk-page section.panel.process .spio-progressbar .process .line,
 .wrap.is-shortpixel-bulk-page section.panel.finished .spio-progressbar .process .line {
-  background: linear-gradient(90deg, #1fbec9 0%, #1fbec9 49.9%, #cccccc 50%, #cccccc 100%);
+  background: linear-gradient(90deg, rgb(31, 190, 201) 0%, rgb(31, 190, 201) 49.9%, rgb(204, 204, 204) 50%, rgb(204, 204, 204) 100%);
 }
 .wrap.is-shortpixel-bulk-page section.panel.process .process_heading,
 .wrap.is-shortpixel-bulk-page section.panel.finished .process_heading {
@@ -1580,7 +1580,7 @@
   background: #1FBEC9;
 }
 .wrap.is-shortpixel-bulk-page section.panel.finished .spio-progressbar .result .line {
-  background: linear-gradient(90deg, #1fbec9 0%, #1fbec9 49.9%, #cccccc 50%, #cccccc 100%);
+  background: linear-gradient(90deg, #1fbec9 0%, #1fbec9 49.9%, white 50%, white 100%);
 }
 .wrap.is-shortpixel-bulk-page section.panel.finished .average-optimization {
   position: relative;
@@ -1640,7 +1640,7 @@
   transition: all 0.5s ease;
 }
 .wrap.is-shortpixel-bulk-page section.panel.finished nav button.finish:hover {
-  background: #24d1dd;
+  background: rgb(36.2392241379, 209.2887931034, 221.2607758621);
 }
 .wrap.is-shortpixel-bulk-page .part-debug {
   background: #000;
