--- a/res/scss/shortpixel-bulk.scss
+++ b/res/scss/shortpixel-bulk.scss
@@ -454,7 +454,7 @@
       }
 
       >div.result .line {
-        background: linear-gradient(90deg, rgba(204, 204, 204, 100) 0%, rgba(204, 204, 204, 100) 49.9%, rgba(255, 255, 255, 1) 51%, rgba(255, 255, 255, 1) 100%);
+        background: linear-gradient(90deg, rgba(204, 204, 204, 100) 0%, rgba(204, 204, 204, 100) 49.9%, #f4fbfc 51%, #f4fbfc 100%);
       }
 
       >div.select .line {
